test/good/91.zls
(* Check the causality analysis of a next under an on to the same variable. *)

let hybrid main z = () where
  rec init already = false
  and automaton
      | S0 ->
          do
          until z on (not already)
            then do next already = true in S0

